# git-cvs-fast-import

./: .dockerignore  .gitignore  .goreleaser.yml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  TODO.md
.github/workflows/: goreleaser.yaml  rust.yaml
.goreleaser/: post.sh
comma-v/: Cargo.toml
comma-v/examples/: extract-script.rs
comma-v/src/: error.rs  lib.rs  num.rs  types.rs
comma-v/src/parser/: char.rs  mod.rs  scalar.rs
comma-v/src/parser/fixtures/admin/: input
comma-v/src/parser/fixtures/delta/: input
comma-v/src/parser/fixtures/delta_text/: input  log  text
comma-v/src/parser/fixtures/file/: input
eq-macro/: Cargo.toml
eq-macro/src/: lib.rs
examples/: versions.rs
git-fast-import/: Cargo.toml
git-fast-import/src/: blob.rs  commit.rs  error.rs  identity.rs  lib.rs  mark.rs  mark_file.rs  tag.rs
internal/process/: Cargo.toml
internal/process/src/: error.rs  lib.rs  preflight.rs  process.rs
internal/state/: Cargo.toml
internal/state/src/: error.rs  file_revision.rs  lib.rs  patchset.rs  tag.rs
internal/state/src/v1/: file_revision.rs  mod.rs  patchset.rs  tag.rs
internal/store/: Cargo.toml
internal/store/src/: connection.rs  lib.rs  sql.rs  types.rs
internal/store/src/inserters/: file_revision.rs  patchset.rs  tag.rs
internal/store/src/migrations/: V1__init.sql
patchset/: Cargo.toml
patchset/src/: lib.rs
rcs-ed/: Cargo.toml
rcs-ed/examples/: patch.rs
rcs-ed/src/: command.rs  lib.rs  script.rs
rcs-ed/src/fixtures/a0/: 1.1.ed  1.10.ed  1.11.ed  1.12.ed  1.13.ed  1.2.ed  1.3.ed  1.4.ed  1.5.ed  1.6.ed  1.7.ed  1.8.ed  1.9.ed
src/: branch.rs  commit.rs  discovery.rs  main.rs  observer.rs  output.rs  tag.rs
src/state/: error.rs  mod.rs
store/: Cargo.toml
store/src/: connection.rs  error.rs
store/src/inserters/: file_revision.rs  mod.rs  patchset.rs  tag.rs
store/src/migrations/: V1__init.sql
