[package]
name = "git-cvs-fast-import"
version = "0.1.1-alpha.0"
edition = "2018"

[workspace]
members = [ "comma-v", "eq-macro", "git-fast-import", "internal/process", "internal/state", "patchset", "rcs-ed" ]

[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
anyhow = "1.0.44"
comma-v = { path = "comma-v" }
flexi_logger = { version = "0.19.6", features = ["async", "colors"] }
flume = "0.10.9"
git-cvs-fast-import-process = { path = "internal/process" }
git-cvs-fast-import-state = { path = "internal/state" }
git-fast-import = { path = "git-fast-import" }
log = "0.4.14"
num_cpus = "1.13.0"
parse_duration = "2.1.1"
patchset = { path = "patchset" }
rcs-ed = { path = "rcs-ed" }
structopt = "0.3.25"
tempfile = "3.2.0"
thiserror = "1.0.30"
tokio = { version = "1.13.0", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time", "fs"] }
walkdir = "2.3.2"

[features]
