[package]
name = "comma-v"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
derive_more = "0.99.16"
nom = "6.2.1"
thiserror = "1.0.26"

[dev-dependencies]
anyhow = "1.0.43"
structopt = "0.3.22"
