[package]
name = "comma-v"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
derive_more = "0.99.17"
eq-macro = { path = "../eq-macro" }
itertools = "0.13.0"
nom = "7.1.0"
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.53"
structopt = "0.3.26"
