[package]
name = "git-fast-import"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "1.0.0"
nom = "7.1.0"
rev_lines = "0.2.1"
serde = "1.0.136"
thiserror = "1.0.30"
