[package]
name = "git-cvs-fast-import-process"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git-fast-import = { path = "../../git-fast-import" }
log = "0.4.14"
structopt = "0.3.26"
thiserror = "1.0.30"
tokio = { version = "1.41.0", features = ["io-util", "process", "sync"] }

[features]
