[package]
name = "git-cvs-fast-import-state"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[dependencies]
bincode = "1.3.3"
derive_more = "0.99.17"
git-fast-import = { path = "../../git-fast-import" }
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive", "rc"] }
speedy = "0.8.1"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["io-util", "sync"] }
zstd = "0.13.2"

[features]
