[package]
name = "git-cvs-fast-import-store"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refinery = { version = "0.6.0", features = ["rusqlite"] }
rusqlite = { version = "0.25.3", features = ["blob", "bundled"] }
thiserror = "1.0.29"
